Fix layout issues, add "wip" notice

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply scroll-smooth;
+}
+
 body {
   font-family: "Roboto Mono", monospace;
 }
@@ -67,11 +71,11 @@ body {
 }
 
 .skill-item-container {
-  @apply bg-slate-200 p-3 rounded-3xl flex flex-col gap-3;
+  @apply bg-gray-200 p-3 flex flex-col gap-3;
 }
 
 .skill-item {
-  @apply flex flex-col gap-2 p-3 bg-slate-50 rounded-2xl;
+  @apply flex flex-col gap-2 p-3 bg-white;
 }
 
 .skill-item-head {
@@ -92,7 +96,7 @@ body {
 }
 
 .skill-item-level {
-  @apply bg-slate-200 w-full h-3 rounded-full block;
+  @apply bg-gray-200 w-full h-3 block;
 }
 
 @keyframes skill-item-level-animation {
@@ -106,6 +110,5 @@ body {
   animation-name: skill-item-level-animation;
   animation-duration: 2s;
   animation-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
-  @apply bg-slate-400 h-3 rounded-full z-10 block;
+  @apply bg-gray-400 h-3 z-10 block;
 }
-
