--- a/tailwind.css
+++ b/tailwind.css
@@ -738,8 +738,8 @@ video {
   grid-column: span 1 / span 1;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
+.col-span-8 {
+  grid-column: span 8 / span 8;
 }
 
 .col-span-10 {
@@ -754,16 +754,16 @@ video {
   grid-column-start: 2;
 }
 
-.col-start-9 {
-  grid-column-start: 9;
-}
-
 .col-start-11 {
   grid-column-start: 11;
 }
 
 .col-start-7 {
   grid-column-start: 7;
+}
+
+.col-end-12 {
+  grid-column-end: 12;
 }
 
 .row-span-1 {
@@ -790,17 +790,13 @@ video {
   grid-row-start: 5;
 }
 
-.float-right {
-  float: right;
-}
-
-.float-left {
-  float: left;
-}
-
 .my-\[52px\] {
   margin-top: 52px;
   margin-bottom: 52px;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .mb-4 {
@@ -809,6 +805,10 @@ video {
 
 .mr-0 {
   margin-right: 0px;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .inline-block {
@@ -827,6 +827,10 @@ video {
   display: none;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .h-full {
   height: 100%;
 }
@@ -835,20 +839,12 @@ video {
   height: 22px;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .h-64 {
   height: 16rem;
 }
 
 .h-96 {
   height: 24rem;
-}
-
-.h-16 {
-  height: 4rem;
 }
 
 .min-h-screen {
@@ -871,6 +867,10 @@ video {
   width: 24rem;
 }
 
+.flex-1 {
+  flex: 1 1 0%;
+}
+
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -886,6 +886,10 @@ video {
 
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-rows-3 {
@@ -916,6 +920,10 @@ video {
   justify-content: space-evenly;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -926,10 +934,6 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
-}
-
-.gap-16 {
-  gap: 4rem;
 }
 
 .gap-y-4 {
@@ -956,16 +960,8 @@ video {
   align-self: flex-end;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
-.text-ellipsis {
-  text-overflow: ellipsis;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
+.justify-self-end {
+  justify-self: end;
 }
 
 .border-4 {
@@ -1031,6 +1027,10 @@ video {
   padding-bottom: 1rem;
 }
 
+.pt-16 {
+  padding-top: 4rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1055,6 +1055,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .transition-transform {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1069,6 +1074,10 @@ video {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -1197,9 +1206,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
-  border-radius: 1.5rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
   padding: 0.75rem;
 }
 
@@ -1207,9 +1215,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  border-radius: 1rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding: 0.75rem;
 }
 
@@ -1240,9 +1247,8 @@ body {
   display: block;
   height: 0.75rem;
   width: 100%;
-  border-radius: 9999px;
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 @-webkit-keyframes skill-item-level-animation {
@@ -1268,20 +1274,29 @@ body {
   z-index: 10;
   display: block;
   height: 0.75rem;
-  border-radius: 9999px;
   --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 768px) {
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:h-6 {
+    height: 1.5rem;
+  }
+
+  .md\:w-12 {
+    width: 3rem;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:col-span-8 {
-    grid-column: span 8 / span 8;
-  }
-
-  .lg\:col-span-1 {
-    grid-column: span 1 / span 1;
-  }
-
   .lg\:col-span-4 {
     grid-column: span 4 / span 4;
   }
@@ -1292,10 +1307,6 @@ body {
 
   .lg\:col-span-7 {
     grid-column: span 7 / span 7;
-  }
-
-  .lg\:col-start-11 {
-    grid-column-start: 11;
   }
 
   .lg\:col-start-2 {
@@ -1335,36 +1346,24 @@ body {
     display: none;
   }
 
-  .lg\:h-6 {
-    height: 1.5rem;
-  }
-
   .lg\:h-screen {
     height: 100vh;
   }
 
-  .lg\:w-12 {
-    width: 3rem;
-  }
-
-  .lg\:justify-center {
-    justify-content: center;
-  }
-
-  .lg\:gap-8 {
-    gap: 2rem;
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:gap-0 {
     gap: 0px;
   }
 
-  .lg\:place-self-auto {
-    place-self: auto;
+  .lg\:gap-8 {
+    gap: 2rem;
   }
 
-  .lg\:place-self-end {
-    place-self: end;
+  .lg\:place-self-auto {
+    place-self: auto;
   }
 
   .lg\:self-start {
@@ -1378,5 +1377,28 @@ body {
   .lg\:self-center {
     align-self: center;
   }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
 }
 
+@media (min-width: 1280px) {
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:gap-12 {
+    gap: 3rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .\32xl\:gap-16 {
+    gap: 4rem;
+  }
+}
